<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_map"
        android:orderInCategory="1"
        android:showAsAction="never"
        android:title="@string/action_map"/>

    <item
        android:id="@+id/action_team"
        android:orderInCategory="2"
        android:showAsAction="never"
        android:title="@string/action_team"/>

    <item
        android:id="@+id/action_stats"
        android:orderInCategory="4"
        android:showAsAction="never"
        android:title="@string/action_stats"/>

    <item
        android:id="@+id/action_character"
        android:orderInCategory="5"
        android:showAsAction="never"
        android:title="@string/action_character"/>

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="6"
        android:showAsAction="never"
        android:title="@string/action_settings"/>

</menu>
